--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -60,16 +60,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Arrow.cs" />
-    <Compile Include="Assets\ContextTesting.cs" />
     <Compile Include="Assets\Maybe.cs" />
     <Compile Include="Assets\ObjectExtensions.cs" />
     <Compile Include="Assets\RotateTestCode.cs" />
     <Compile Include="Assets\SoldierAI.cs" />
     <Compile Include="Assets\SquadAttack.cs" />
+    <Compile Include="Assets\SquadCenterPosition.cs" />
     <Compile Include="Assets\SquadMove.cs" />
     <Compile Include="Assets\SquadState.cs" />
     <Compile Include="Assets\Triangulator.cs" />
     <Compile Include="Assets\TwoDimensionalCollection.cs" />
+    <Compile Include="Assets\UnitClicked.cs" />
     <Compile Include="Assets\WilDebug.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
