--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ConvexHullCalculator.cs" />
     <Compile Include="Assets\InteractionArrow\Arrow.cs" />
     <Compile Include="Assets\Maybe.cs" />
     <Compile Include="Assets\ObjectExtensions.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Assets\Squad\AttackOrderSound.cs" />
     <Compile Include="Assets\Squad\Interaction.cs" />
     <Compile Include="Assets\Squad\MouseClick.cs" />
+    <Compile Include="Assets\Squad\SelectMeshUpdater.cs" />
     <Compile Include="Assets\Squad\Soldier\Arrow\ArrowStickOnHit.cs" />
     <Compile Include="Assets\Squad\Soldier\Arrow\ArrowTipRotation.cs" />
     <Compile Include="Assets\Squad\Soldier\ShowAsSelected.cs" />
