Started work on arrows doing damage

--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Assets\Squad\Interaction.cs" />
     <Compile Include="Assets\Squad\MouseClick.cs" />
     <Compile Include="Assets\Squad\SelectMeshUpdater.cs" />
-    <Compile Include="Assets\Squad\Soldier\Arrow\ArrowStickOnHit.cs" />
+    <Compile Include="Assets\Squad\Soldier\Arrow\ArrowCollision.cs" />
     <Compile Include="Assets\Squad\Soldier\Arrow\ArrowTipRotation.cs" />
     <Compile Include="Assets\Squad\Soldier\ShowAsSelected.cs" />
     <Compile Include="Assets\Squad\Soldier\SoldierAI.cs" />
