--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -21,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;UNIT_TESTING</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -29,9 +29,18 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'UnitTest|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\UnitTest\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;UNIT_TESTING</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentAssertions">
@@ -67,6 +76,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Features\CreateSquad\SquadCreationSystemTests.cs" />
+    <Compile Include="Features\CreateSquad\TestEntity.cs" />
+    <Compile Include="Features\CreateSquad\TestPool.cs" />
     <Compile Include="FormationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -77,6 +89,10 @@
     <ProjectReference Include="..\UnityVS.MicroTactics.CSharp.csproj">
       <Project>{a7a55391-1c2d-c12a-f2c3-d7ede3d3aacc}</Project>
       <Name>UnityVS.MicroTactics.CSharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UnityVS.MicroTactics.CSharp.Editor.csproj">
+      <Project>{D6F6D517-5320-D49F-A649-BF01687C2F17}</Project>
+      <Name>UnityVS.MicroTactics.CSharp.Editor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
