Views can be added to units

--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -82,19 +82,23 @@
     <Compile Include="Assets\ConvexHullCalculator.cs" />
     <Compile Include="Assets\EntitasSetup.cs" />
     <Compile Include="Assets\Events.cs" />
+    <Compile Include="Assets\Features\CreateSquad\AddUnitViewSystem.cs" />
     <Compile Include="Assets\Features\CreateSquad\ComponentContainer.cs" />
     <Compile Include="Assets\Features\CreateSquad\SquadComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\SquadCreationSystem.cs" />
     <Compile Include="Assets\Features\CreateSquad\StartSquadSystem.cs" />
-    <Compile Include="Assets\Features\CreateSquad\TestComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\UnitComponent.cs" />
+    <Compile Include="Assets\Features\CreateSquad\UnitTemplateComponent.cs" />
+    <Compile Include="Assets\Features\CreateSquad\UnitViewComponent.cs" />
+    <Compile Include="Assets\Generated\AddUnitViewSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ComponentIds.cs" />
     <Compile Include="Assets\Generated\Pools.cs" />
     <Compile Include="Assets\Generated\SquadComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadCreationSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\StartSquadSystemGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\TestComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\UnitTemplateComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\UnitViewComponentGeneratedExtension.cs" />
     <Compile Include="Assets\GroundCollision.cs" />
     <Compile Include="Assets\InteractionArrow\Arrow.cs" />
     <Compile Include="Assets\Libraries\Entitas.CodeGenerator\Attributes\DontGenerateAttribute.cs" />
