--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Features\CreateSquad\SquadCreationSystemTests.cs" />
     <Compile Include="Features\CreateSquad\TestEntity.cs" />
     <Compile Include="Features\CreateSquad\TestPool.cs" />
+    <Compile Include="Features\DestroySystemTests.cs" />
     <Compile Include="FormationTests.cs" />
     <Compile Include="IEnumerableExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
