--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Events.cs" />
     <Compile Include="Assets\Features\ComponentContainer.cs" />
     <Compile Include="Assets\Features\CreateSquad\AddUnitViewSystem.cs" />
+    <Compile Include="Assets\Features\CreateSquad\BoxFormationComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\PositionComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\SquadComponent.cs" />
     <Compile Include="Assets\Features\CreateSquad\SquadCreationSystem.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Assets\Generated\AddUnitViewSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiMoveOrderSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\BoxFormationComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ComponentIds.cs" />
     <Compile Include="Assets\Generated\DestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroySystemGeneratedExtension.cs" />
