Made position interpolation be Unity independent, set frame rate

--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Features\DestroySystemTests.cs" />
     <Compile Include="Features\EntityExtensions.cs" />
     <Compile Include="Features\MoveSystemTests.cs" />
+    <Compile Include="Features\SquadCenterPositionSystemTests.cs" />
     <Compile Include="Features\SquadMoveOrderSystemTests.cs" />
     <Compile Include="FloatExtensionsTests.cs" />
     <Compile Include="FormationTests.cs" />
