--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -82,8 +82,6 @@
     <Compile Include="Assets\ConvexHullCalculator.cs" />
     <Compile Include="Assets\EntitasSetup.cs" />
     <Compile Include="Assets\Events.cs" />
-    <Compile Include="Assets\Features\AnimateComponent.cs" />
-    <Compile Include="Assets\Features\AnimateUnitSystem.cs" />
     <Compile Include="Assets\Features\ComponentContainer.cs" />
     <Compile Include="Assets\Features\CreateSquad\AddUnitViewSystem.cs" />
     <Compile Include="Assets\Features\CreateSquad\BoxFormationComponent.cs" />
@@ -101,6 +99,8 @@
     <Compile Include="Assets\Features\LinkViewsStartSystem.cs" />
     <Compile Include="Assets\Features\Move\AiComponent.cs" />
     <Compile Include="Assets\Features\Move\AiMoveOrderSystem.cs" />
+    <Compile Include="Assets\Features\Move\AnimateComponent.cs" />
+    <Compile Include="Assets\Features\Move\AnimateUnitSystem.cs" />
     <Compile Include="Assets\Features\Move\MoveOrderComponent.cs" />
     <Compile Include="Assets\Features\Move\MoveSystem.cs" />
     <Compile Include="Assets\Features\Move\MovementComponent.cs" />
