--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Features\SquadAttackOrderSystemTests.cs" />
     <Compile Include="Features\SquadCenterPositionSystemTests.cs" />
     <Compile Include="Features\SquadMoveOrderSystemTests.cs" />
+    <Compile Include="Features\UnitsCacheSystemTests.cs" />
     <Compile Include="FloatExtensionsTests.cs" />
     <Compile Include="FormationTests.cs" />
     <Compile Include="IEnumerableExtensionsTests.cs" />
